feat: members/me API 가 학과 이름, 관심사명, 기술스택 이름까지 포함하게 변경